--- a/#source/scss/_global.scss
+++ b/#source/scss/_global.scss
@@ -1,4 +1,3 @@
-
 @media(min-width:1200px) {
     .container {
         max-width: 1182px;
@@ -30,7 +29,7 @@ button {
     background: transparent;
     border: none;
 
-   
+
 }
 
 h6 {
@@ -94,4 +93,14 @@ h4 {
     main.main {
         padding-top: 60px;
     }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
 }
