--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -3,6 +3,8 @@
 @import "index";
 @import "userarea";
 @import "blog";
+@import "blog-single";
+@import "campaigns";
 @import "header";
 @import "footer";
 
