--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -6,6 +6,7 @@
 @import "blog-single";
 @import "campaigns";
 @import "campaigns-single";
+@import "products";
 @import "header";
 @import "footer";
 
