--- a/#source/scss/campaigns.scss
+++ b/#source/scss/campaigns.scss
@@ -224,6 +224,7 @@
 .tab-body {
     display: none;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     &.active {
         display: flex;
@@ -238,15 +239,22 @@
     border: 1px solid #CCD2D7;
     padding: 36px;
     text-align: center;
+    margin-bottom: 20px;
+    overflow: hidden;
 
-    >img {
+    &:after {
+        content: ''; 
         position: absolute;
-        object-fit: cover;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
+        bottom: -450px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        right: 0;
+        width: 660px;
+        height: 660px;
+        border-radius: 50%;
+        background-color: #C4E9FB;
+        opacity: 0.4;
+        transition: 0.7s ease-in-out;
     }
 
     .type {
@@ -258,6 +266,8 @@
         line-height: 150%;
         display: inline-flex;
         margin-bottom: 12px;
+        position: relative;
+        z-index: 2;
     }
 
     .kind {
@@ -266,6 +276,8 @@
         font-weight: 600;
         line-height: 150%;
         margin-bottom: 15px;
+        position: relative;
+        z-index: 2;
     }
 
     .name {
@@ -274,6 +286,9 @@
         margin-bottom: 13px;
         font-size: 40px;
         line-height: 150%;
+        font-weight: 600;
+        position: relative;
+        z-index: 2;
     }
 
     .speed {
@@ -283,6 +298,8 @@
         font-weight: 600;
         margin-bottom: 12px;
         font-family: "Noto Sans Georgian", sans-serif;
+        position: relative;
+        z-index: 2;
     }
 
     .text {
@@ -292,6 +309,12 @@
         font-weight: 500;
         font-family: "Noto Sans Georgian", sans-serif;
         line-height: 120%;
+        position: relative;
+        z-index: 2;
+    }
+    .icon{
+        position: relative;
+        z-index: 2;
     }
 
     .button {
@@ -304,9 +327,17 @@
         color: #247DC0;
         border-radius: 30px;
         border: 1px solid #247DC0;
-        transition: .3s ease;
+        transition: .4s ease-in-out;
+        position: relative;
+        z-index: 2;
+    }
 
-        &:hover {
+    &:hover {
+        &:after{
+            bottom: -150px;
+            opacity: 1;
+        }
+        .button{
             background-color: #247DC0;
             color: #fff;
         }
