--- a/#source/scss/products.scss
+++ b/#source/scss/products.scss
@@ -36,6 +36,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .swiper-button-prev:after,
+    .swiper-rtl .swiper-button-next:after,
+    .swiper-button-next:after,
+    .swiper-rtl .swiper-button-prev:after {
+        display: none;
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+        position: relative;
+        top: initial;
+        left: initial;
+        right: initial;
+        display: flex;
+        height: 32px;
+        width: 32px;
+        margin: 0 15px;
+
+        &.swiper-button-disabled {
+            opacity: 0;
+        }
+
+        img {
+            background-size: cover;
+            height: 32px;
+            width: 32px;
+        }
+    }
 }
 
 .play-btn {
@@ -51,6 +80,27 @@
         background-size: cover;
         height: 32px;
         width: 32px;
+    }
+}
+
+.srvslidewrap.special {
+    background-color: #FF9601;
+
+    .tar,
+    .name,
+    .title,
+    p {
+        color: #fff;
+    }
+
+    .btn {
+        color: #fff;
+        border-color: #fff;
+
+        &:hover {
+            color: #FF9601;
+            background-color: #fff;
+        }
     }
 }
 
@@ -82,9 +132,15 @@
         }
     }
 
+    .modal-body {
+        padding: 32px 36px 0;
+    }
+
     .modal-footer {
         display: flex;
         justify-content: flex-end;
+        border: none;
+        padding: 20px 36px 32px;
 
         .bluebtn {
             width: auto;
@@ -98,5 +154,141 @@
                 opacity: 0.7;
             }
         }
+    }
+
+    .tabs {
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        margin-bottom: 35px;
+
+        .tab {
+            padding: 5px 32px;
+            height: 44px;
+            display: inline-flex;
+            align-items: center;
+            font-size: 20px;
+            border-radius: 10px;
+            border: 1px solid #247DC0;
+            background-color: #fff;
+            color: #082134;
+            margin-right: 10px;
+            margin-bottom: 10px;
+
+            &:hover {
+                color: #247DC0;
+                background-color: rgba(#247DC0, .05);
+            }
+        }
+
+        .tab.active {
+            color: #fff;
+            background-color: #247DC0;
+
+            &:after {
+                display: none;
+            }
+        }
+    }
+
+    .tab-wrapper {
+        height: 380px;
+        overflow: auto;
+
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        scrollbar-width: none;
+        /* Firefox */
+        -ms-overflow-style: none;
+        /* Internet Explorer/Edge */
+    }
+
+    .tab-body {
+        justify-content: flex-start;
+        gap: 24px;
+    }
+
+    .tab-card {
+        width: calc(25% - 18px);
+        height: 176px;
+        padding: 24px 28px;
+        margin: 0;
+
+        &::after {
+            bottom: -520px;
+        }
+
+        &:hover:after {
+            bottom: -300px;
+            opacity: 1;
+        }
+    }
+}
+
+
+
+// --- Adaptive --- //
+
+@media(max-width:991.8px) {
+    #productsModal .tab-card {
+        width: calc(33% - 15px);
+        height: 180px;
+    }
+
+    #productsModal .tab-body {
+        gap: 25px;
+    }
+}
+
+@media(max-width:767.8px) {
+    .products {
+        margin-bottom: 50px;
+    }
+
+    #productsModal .tab-card {
+        width: calc(50% - 15px);
+        height: 180px;
+    }
+
+    #productsModal .tab-body {
+        gap: 25px;
+    }
+}
+
+@media(max-width:575.8px) {
+    .products {
+        margin-bottom: 50px;
+    }
+
+    #productsModal .tab-card {
+        width: 100%;
+        max-width: 260px;
+        margin: 0 auto;
+        height: 180px;
+    }
+
+    #productsModal .tab-body {
+        gap: 25px;
+    }
+
+    #productsModal .tabs .tab {
+        padding: 4px 20px;
+        height: 35px;
+        font-size: 16px;
+    }
+
+    #productsModal .modal-body {
+        padding: 20px 18px 0;
+    }
+
+    #productsModal .modal-footer {
+        padding: 20px 18px 20px;
+    }
+}
+
+@media (max-width: 425px) {
+    #productsModal .tabs {
+        flex-direction: row;
     }
 }
