--- a/#source/scss/_index.scss
+++ b/#source/scss/_index.scss
@@ -626,6 +626,7 @@
         font-size: 12px;
         outline: none;
         transition: 0.3s;
+        background-color: #F8F9F9;
 
         &:focus {
             border-color: #247DC0;
